--- a/server/package.json
+++ b/server/package.json
@@ -23,7 +23,14 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
+    "axios": "^1.12.2",
+    "class-transformer-validator": "^0.9.1",
+    "class-validator": "^0.14.2",
+    "decimal.js": "^10.6.0",
+    "mongoose": "^8.19.0",
+    "nanoid": "^5.1.6",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
