--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-checkbox": "^1.3.3",
+    "axios": "^1.12.2",
     "clsx": "^2.1.1",
     "next": "15.5.4",
     "react": "19.1.0",
