--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "decimal.js": "^10.6.0",
     "mongoose": "^8.19.0",
     "nanoid": "^5.1.6",
+    "node-telegram-bot-api": "^0.66.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
@@ -44,6 +45,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
+    "@types/node-telegram-bot-api": "^0.64.11",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
