--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-toast": "^1.2.15",
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
+    "decimal.js": "^10.6.0",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
