--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,15 @@
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-toast": "^1.2.15",
+    "@radix-ui/react-visually-hidden": "^1.2.3",
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
     "decimal.js": "^10.6.0",
     "next": "15.5.4",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
