--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "sonner": "^2.0.7",
+    "tailwind-animate": "^0.2.10",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
